Added delete functionality, only deletes a hardcoded word currently but will add user input next

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     values-round/strings.xml for round devices.
     -->
     <string name="hello_world">Hello Square World!</string>
+    <!-- Delete Button for home page -->
+    <string name="delete_word">Delete Word</string>
 </resources>
